# panorama-foa-mvp

./: .gitignore  IMPLEMENTATION_PLAN.md  INSTALL.md  LICENSE  README.md  generate.py  requirements.txt
.codex/: config.toml
configs/: default.yaml
docs/: ACCEPTANCE_MATRIX.md  CODEX_HANDOFF_PANORAMA_TO_FOA.md  CODEX_MULTI_AGENT_START_PROMPT.md  DECISIONS.md  IMMUTABLE_SCOPE.md  LOCAL_MMAUDIO_CLEANUP_2026-06-17.md  (+3 more)
panorama_foa_mvp/: .env.example  AGENTS.md  README.md  pyproject.toml
panorama_foa_mvp/examples/: README.md  manual_plan.example.json  starship_captain_private_quarters_plan.json
panorama_foa_mvp/prompts/: panorama_scene_planner.txt
panorama_foa_mvp/src/panorama_foa/: __init__.py  cli.py  config.py  coordinates.py  factory.py  image_utils.py  pipeline.py  schemas.py
panorama_foa_mvp/src/panorama_foa/ambisonics/: __init__.py  exporter.py  foa.py  mixer.py
panorama_foa_mvp/src/panorama_foa/audio/: __init__.py  decode.py  elevenlabs.py  metrics.py  mmaudio.py  mock.py  processing.py  provider_base.py  render_config.py
panorama_foa_mvp/src/panorama_foa/audio/backends/: __init__.py  diffusion.py  mmaudio_diffusion.py
panorama_foa_mvp/src/panorama_foa/planner/: __init__.py  base.py  manual.py  openai_vlm.py
panorama_foa_mvp/tests/: conftest.py  test_api_providers.py  test_audio_processing.py  test_coordinates.py  test_exporter.py  test_factory.py  test_foa_encoder.py  test_image_utils.py  test_mixer.py  test_mmaudio_provider.py  test_no_paid_api.py  test_pipeline_mock.py  test_scope_guard.py
panorama_foa_mvp/tests/fixtures/: manual_plan.json
(+44 files in other folders)
