[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panorama-foa"
version = "0.1.0"
description = "Static panorama to first-order Ambisonics MVP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "numpy",
  "scipy",
  "soundfile",
  "pillow",
  "pydantic>=2",
  "openai",
  "httpx",
  "python-dotenv",
  "typer",
  "rich",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
